<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_location_default">Ho Chi Minh</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_title">Location</string>
    <string name="pref_units_key">unit</string>
    <string name="pref_units_title">Unit</string>
    <string name="pref_units_default">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="format_share">%1$s #SunshineApp</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>
    <string name="format_wind_mph">
        Wind: <xliff:g id="wind_speed">%1.0f</xliff:g> mph <xliff:g id="wind_dir">%2$s</xliff:g>
    </string>
    <string name="format_wind_kmh">
        Wind: <xliff:g id="wind_speed">%1.0f</xliff:g> km/h <xliff:g id="wind_dir">%2$s</xliff:g>
    </string>
    <string name="format_pressure">
        Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>
    <string name="format_humidity">
        Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>

    <string name="sync_account_type">sunshine.hoanganh.hcmut</string>
    <string name="content_authority">hcmut.hoanganh.sunshine.app</string>
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g>
        High: <xliff:g id="high">%2$s</xliff:g>
        Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <string name="pref_last_notification">last_sync</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_key">pref_notification</string>
    <string name="pref_notification_on">Enable</string>
    <string name="pref_notification_off">Disable</string>
    <string name="pref_notification_default">true</string>

</resources>
