<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_title" />

    <ListPreference
        android:title="@string/pref_units_title"
        android:key="@string/pref_units_key"
        android:defaultValue="@string/pref_units_default"
        android:entryValues="@array/pref_units_values"
        android:entries="@array/pref_units_options"/>

    <CheckBoxPreference
        android:title="@string/pref_notification_title"
        android:key="@string/pref_notification_key"
        android:summaryOn="@string/pref_notification_on"
        android:summaryOff="@string/pref_notification_off"
        android:defaultValue="@string/pref_notification_default" />

</PreferenceScreen>